--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
  
 <!-- custom css -->
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="/public/style.css">
 </head>
 <body>
   <div id="home"><h1>Custom Build Your Dream Car</h1>
@@ -82,7 +82,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.5/handlebars.min.js"></script>
    <script src="https://www.gstatic.com/firebasejs/live/3.0/firebase.js"></script>
   <!-- NOTE: the sequence below. main.js before api key. See note by AN above -->
-  <script src="js/main.js"></script>
+  <script src="/public/js/main.js"></script>
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyANfUcFBlzYGWnkUBUWqW_DPKFPqW1Jz1A&libraries=places&callback=initMap"> async defer></script>
 </body>
 </html>
