ajax call to map to backend server

--- a/index.html
+++ b/index.html
@@ -4,12 +4,21 @@
   <title>Build your car!</title>
   <!-- bootstrap -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+  <!-- Latest compiled and minified CSS -->
+
  
 <!-- custom css -->
   <link rel="stylesheet" href="/style.css">
 </head>
 <body>
-  <div id="home"><h1>Custom Build Your Dream Car</h1>
+  <nav class="navbar navbar-inverse navbar-static-top">
+  <div class="container">
+    
+    <div id="home"><h1>Custom Build Your Dream Car</h1></div>
+  </div>
+</nav>
+  
+    
     <div id="map"></div>
     <button id="showme">Shop Now</button>
   </div>
