--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 
   <script src="https://code.jquery.com/jquery-3.1.0.min.js"   integrity="sha256-cCueBR6CsyA4/9szpPfrX3s49M9vUU5BgtiJj06wt/s="   crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.5/handlebars.min.js"></script>
-   <script src="https://www.gstatic.com/firebasejs/live/3.0/firebase.js"></script>
+   <!--script src="https://www.gstatic.com/firebasejs/live/3.0/firebase.js"></script-->
   <!-- NOTE: the sequence below. main.js before api key. See note by AN above -->
   <script src="/js/main.js"></script>
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyANfUcFBlzYGWnkUBUWqW_DPKFPqW1Jz1A&libraries=places&callback=initMap"> async defer></script>
