adding a js carousel and new splash window

--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
 </nav>
   
     
-    <div id="map"></div>
-    <button id="showme">Shop Now</button>
-  </div>
+    <!-- <div id="map"></div> 
+    <button id="showme">Please enter our showroom</button>
+  </div>  -->
   <div id="showroom">
         <script id="vehicle-options-template" type="text/x-handlebars-template">
           <div class="col-md-6 vehicle-option {{feature}}" data-panel="vehicle" data-price="{{price}}" data-option="{{feature}}"></div>
