gui front end work

--- a/splash.html
+++ b/splash.html
@@ -22,6 +22,10 @@
     <div id="home"><h1>Custom Build Your Dream Car</h1></div>
   </div>
 </nav>
+<div>
+<button id="showme"><a href="/second_page">Please enter our showroom</button>
+
+</div>
 
 <script src="https://code.jquery.com/jquery-3.1.0.min.js"   integrity="sha256-cCueBR6CsyA4/9szpPfrX3s49M9vUU5BgtiJj06wt/s="   crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.5/handlebars.min.js"></script>
@@ -44,6 +48,9 @@
   <div class="carousel-inner">
     <div class="item active">
       <img src="/assets/cadenza.jpg" alt="Cadenza">
+      
+    
+  
     </div>
 
     <div class="item">
