--- a/splash.html
+++ b/splash.html
@@ -6,8 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script> 
+  
+   
 </head>
 
 
@@ -23,7 +23,9 @@
   </div>
 </nav>
 <div>
-<button id="showme"><a href="/second_page">Please enter our showroom</button>
+<button id="showme"> 
+  <a href="/second_page">Please enter our showroom</a>
+</button>
 
 </div>
 
@@ -31,8 +33,8 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.5/handlebars.min.js"></script>
    <!--script src="https://www.gstatic.com/firebasejs/live/3.0/firebase.js"></script-->
   <!-- NOTE: the sequence below. main.js before api key. See note by AN above -->
-  <script src="/js/main.js"></script>
-  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyANfUcFBlzYGWnkUBUWqW_DPKFPqW1Jz1A&libraries=places&callback=initMap"> async defer></script>
+ 
+  <!--<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyANfUcFBlzYGWnkUBUWqW_DPKFPqW1Jz1A&libraries=places&callback=initMap"> async defer></script>
 
   <!--<img src="/assets/cadenza.jpg"> -->
 
@@ -79,6 +81,9 @@
     <span class="glyphicon glyphicon-chevron-right"></span>
     <span class="sr-only">Next</span>
   </a>
+
 </div>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+  
 </body>
 
