--- a/index.html
+++ b/index.html
@@ -81,10 +81,10 @@
               </div>
             </div>
 
-            <!-- <div class="col-md-8 demo-container">
+            <div class="col-md-8 demo-container">
               <img class="col-md-12 vehicle-display" src="">
               <button id="save_my_car">Save my car</button>
-            </div> -->
+            </div>
             
           </div>
           
