--- a/splash.html
+++ b/splash.html
@@ -66,10 +66,11 @@
     </div>
       
     <div class="item">
-        <div class="test"><button>optimamodel</button></div>
+        <div class="test" align="center"><a href="/second_page"><button class="btn btn-success"><h2>Pick Me</h2></button></div></a>
         <img src="/assets/optima.jpg" alt="Optima">
-      <!-- <button id="pinga">Pick Me</button> -->
-      <!-- <button id="showme"> -->
+         
+
+      <!-- <h1><a href="/second_page"><input type="login" class="btn btn-primary" value="Login"/></a></h1> -->
     </div>
 
     <div class="item">
